fix: 🐛 making example circles work on firefox, button style

--- a/packages/trrack-examples/simpleExample/styles/styles.css
+++ b/packages/trrack-examples/simpleExample/styles/styles.css
@@ -1,12 +1,10 @@
 .normalNode
 {
   fill: #333333;
-  r: 7;
 }
 
 .selectedNode
 {
-  r: 10;
   fill: blue
 }
 
